# unpaidrust-website

./: Cargo.toml  connect.sh  run.sh  upload.sh
src/: main.rs
static/: 404.html  blog.html  index.html  resume.html  style.css
