[package]
name = "unpaidrust-website"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6.5"
env_logger = "0.11.2"
openssl = "0.10.64"

